--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="content1">
                     <h3>Moyen de Transport</h3>
                     <p>Vous êtes besoin d'un moyen de transport, "Alors" n'hésitez pas de nous comander</p>
-                    <a href="Work/index.html">plus d'info</a>
+                    <a href="http://city-drive.000webhostapp.com/voitures.html">plus d'info</a>
                 </div>
             </div>
             <div class="card1">
