--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h3>Achat de ticket</h3>
                     <p>Trouvez la Bonne moyen à la Bonne Place à un Bon Prix.
                     </p>
-                    <a href="https://city-drive.github.io/city-drive-ocassion/">plus d'info</a>
+                    <a href="http://city-drive.000webhostapp.com/voitures.html">plus d'info</a>
                 </div>
             </div> 
     </div>
